fix: products on safari

--- a/assets/component-slider.css
+++ b/assets/component-slider.css
@@ -1,38 +1,23 @@
 slider-component {
-  --desktop-margin-left-first-item: max(
-    5rem,
-    calc(
-      (
-          100vw - var(--page-width) + 10rem -
-            var(--grid-desktop-horizontal-spacing)
-        ) / 2
-    )
-  );
   position: relative;
   display: block;
 }
 
 slider-component.slider-component-full-width {
-  --desktop-margin-left-first-item: 1.5rem;
+  /* --desktop-margin-left-first-item: 1.5rem; */
 }
 
 @media screen and (max-width: 989px) {
   .no-js slider-component .slider {
-    padding-bottom: 3rem;
+    /* padding-bottom: 3rem; */
   }
 }
 
 .slider__slide {
   overflow: hidden;
-  --focus-outline-padding: 0.5rem;
-  --shadow-padding-top: calc(
-    (var(--shadow-vertical-offset) * -1 + var(--shadow-blur-radius)) *
-      var(--shadow-visible)
-  );
-  --shadow-padding-bottom: calc(
-    (var(--shadow-vertical-offset) + var(--shadow-blur-radius)) *
-      var(--shadow-visible)
-  );
+  /* --focus-outline-padding: 0.5rem; */
+  /* --shadow-padding-top: calc((var(--shadow-vertical-offset) * -1 + var(--shadow-blur-radius)) * var(--shadow-visible)); */
+  /* --shadow-padding-bottom: calc((var(--shadow-vertical-offset) + var(--shadow-blur-radius)) * var(--shadow-visible)); */
   scroll-snap-align: start;
   flex-shrink: 0;
   padding-bottom: 0;
